# aws-lambda-runtimes-performance

./: .gitignore  GitVersion.yml  README.md  build.sh  nuget.config  perf-test.jmx  samconfig.toml  sample.http  template-final.yaml  template.yaml  test.sh
.github/workflows/: deploy.yaml  docker-image.yml
dotnet-lambda/: Dockerfile  Publish.ps1  Solution.sln  build.sh  lambda.ps1
dotnet-lambda/src/DonNetFunction/: Book.cs  Function.cs
dotnet-lambda/src/DotNetFunction/: Book.cs  DotNetFunction.csproj  Function.cs  Program.cs  aws-lambda-tools-defaults.json
dotnet-lambda/src/DotNetFunction/Properties/PublishProfiles/: Linux-x64.pubxml
go-lambda/: Dockerfile  Dockerfile.arm  Dockerfile.custom-runtime  bootstrap  build.sh  go.mod  go.sum  lambda.go
java-graalvm-lambda/: Dockerfile  Dockerfile.graalvm  Dockerfile.graalvm.al-arm  build.sh
java-graalvm-lambda/src/: pom.xml
java-graalvm-lambda/src/common/: pom.xml
java-graalvm-lambda/src/common/src/main/java/com/filichkin/blog/lambda/model/: Book.java
java-graalvm-lambda/src/lambda-graalvm/: pom.xml
java-graalvm-lambda/src/lambda-java/: pom.xml
java-graalvm-lambda/src/quarkus-aws-lambda/: pom.xml
java-graalvm-lambda/src/quarkus-aws-lambda/src/main/java/com/filichkin/blog/: BookLambda.java  Config.java
java-graalvm-lambda/src/quarkus-aws-lambda/src/main/resources/: application.properties
node-lambda/: lambda.js  package-lock.json  package.json
python-lambda/: lambda.py
ruby-lambda/: app.rb
rust-aws-lambda/: Cargo.toml  Dockerfile  bootstrap  build.sh
rust-aws-lambda/src/: main.rs
(+7 files in other folders)
