[package]
name = "rust-aws-lambda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
lambda_runtime = "0.4.0"
lambda_http = "0.4.0"
log = "0.4.14"
serde = "1.0.127"
serde_json = "1.0.66"
simple_logger = "1.13.0"
tokio = "1.10.0"
rusoto_core = "0.47.0"
rusoto_dynamodb = "0.47.0"
uuid = { version = "0.8.2", features = ["v4"] }
lazy_static = "1.4.0"
#comment for windows
openssl = { version = "=0.10.33", features = ["vendored"] }
aws_lambda_events = "0.4.0"